--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "patch-package  --exclude 'nothing'"
   },
   "dependencies": {
+    "@algorandfoundation/algokit-utils": "^4.1.0",
     "@blockshake/defly-connect": "^1.1.6",
     "@daffiwallet/connect": "^1.0.3",
     "@headlessui/react": "^1.7.17",
@@ -20,6 +22,8 @@
     "algosdk": "^2.7.0",
     "clsx": "^2.0.0",
     "next": "14.0.1",
+    "patch-package": "^8.0.0",
+    "postinstall-postinstall": "^2.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
