--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-toastify": "^9.1.3"
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^4.2.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
