Check balance when call init

--- a/.env
+++ b/.env
@@ -14,3 +14,5 @@ NEXT_PUBLIC_INDEXER_PORT=""
 NEXT_PUBLIC_INDEXER_NETWORK="testnet"
 
 NEXT_PUBLIC_ALGOD_APP_ID=466790641
+
+NEXT_PUBLIC_MINIMUM_BALANCE_REQUIRE=1100000
