--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
