--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
+    "@types/formidable": "^3.4.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
