--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
+    "react-share": "^4.4.1",
     "react-toastify": "^9.1.3",
     "tweetnacl": "^1.0.3"
   },
